[gd_scene load_steps=3 format=3 uid="uid://55brk54wbvha"]

[ext_resource type="Script" path="res://scenes/character_dice_selection.gd" id="1_xrym4"]
[ext_resource type="Texture2D" uid="uid://maahrpkxq23" path="res://assets/dice/d4.png" id="2_ay7di"]

[node name="CharacterDiceSelection" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_xrym4")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthLabel" type="Label" parent="Control"]
layout_mode = 2
offset_left = 909.0
offset_top = 26.0
offset_right = 1005.0
offset_bottom = 68.0
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 30
text = "Health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 925.0
offset_top = 89.0
offset_right = 987.0
offset_bottom = 139.0
theme_override_font_sizes/font_size = 30
text = "Roll"

[node name="HealthResult" type="Label" parent="Control"]
layout_mode = 2
offset_left = 909.0
offset_top = 166.0
offset_right = 1005.0
offset_bottom = 208.0
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 30
text = "Health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="a_d4" type="Button" parent="Control"]
clip_contents = true
layout_mode = 1
offset_left = 150.0
offset_top = 285.0
offset_right = 278.0
offset_bottom = 416.0
icon = ExtResource("2_ay7di")
expand_icon = true

[node name="a_d6" type="Button" parent="Control"]
clip_contents = true
layout_mode = 1
offset_left = 360.0
offset_top = 285.0
offset_right = 488.0
offset_bottom = 416.0
icon = ExtResource("2_ay7di")
expand_icon = true

[node name="a_d8" type="Button" parent="Control"]
clip_contents = true
layout_mode = 1
offset_left = 581.0
offset_top = 287.0
offset_right = 709.0
offset_bottom = 418.0
icon = ExtResource("2_ay7di")
expand_icon = true

[node name="a_d10" type="Button" parent="Control"]
clip_contents = true
layout_mode = 1
offset_left = 166.0
offset_top = 476.0
offset_right = 294.0
offset_bottom = 607.0
icon = ExtResource("2_ay7di")
expand_icon = true

[node name="a_d12" type="Button" parent="Control"]
clip_contents = true
layout_mode = 1
offset_left = 363.0
offset_top = 473.0
offset_right = 491.0
offset_bottom = 604.0
icon = ExtResource("2_ay7di")
expand_icon = true

[node name="a_d20" type="Button" parent="Control"]
clip_contents = true
layout_mode = 1
offset_left = 586.0
offset_top = 477.0
offset_right = 714.0
offset_bottom = 608.0
icon = ExtResource("2_ay7di")
expand_icon = true

[node name="d_d4" type="Button" parent="Control"]
clip_contents = true
layout_mode = 1
offset_left = 1166.0
offset_top = 270.0
offset_right = 1294.0
offset_bottom = 401.0
icon = ExtResource("2_ay7di")
expand_icon = true

[node name="d_d6" type="Button" parent="Control"]
clip_contents = true
layout_mode = 1
offset_left = 1376.0
offset_top = 270.0
offset_right = 1504.0
offset_bottom = 401.0
icon = ExtResource("2_ay7di")
expand_icon = true

[node name="d_d8" type="Button" parent="Control"]
clip_contents = true
layout_mode = 1
offset_left = 1597.0
offset_top = 272.0
offset_right = 1725.0
offset_bottom = 403.0
icon = ExtResource("2_ay7di")
expand_icon = true

[node name="d_d10" type="Button" parent="Control"]
clip_contents = true
layout_mode = 1
offset_left = 1182.0
offset_top = 461.0
offset_right = 1310.0
offset_bottom = 592.0
icon = ExtResource("2_ay7di")
expand_icon = true

[node name="d_d12" type="Button" parent="Control"]
clip_contents = true
layout_mode = 1
offset_left = 1379.0
offset_top = 458.0
offset_right = 1507.0
offset_bottom = 589.0
icon = ExtResource("2_ay7di")
expand_icon = true

[node name="d_d20" type="Button" parent="Control"]
clip_contents = true
layout_mode = 1
offset_left = 1602.0
offset_top = 462.0
offset_right = 1730.0
offset_bottom = 593.0
icon = ExtResource("2_ay7di")
expand_icon = true

[node name="ConfirmButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 947.0
offset_top = 1001.0
offset_right = 1018.0
offset_bottom = 1032.0
text = "Confirm"

[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
